--- a/blog-test/pom.xml
+++ b/blog-test/pom.xml
@@ -196,6 +196,13 @@
 			<artifactId>mybatis</artifactId>  
 			<version>3.1.1</version>  
 		</dependency>
+		
+		<!-- email -->
+		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.4.7</version>
+		</dependency>
   </dependencies>
   
   
